{
    "name": "BuildingSystemControls",
    "maps": [
        {
            "name": "BuildingSystem",
            "id": "90cd0e9d-6e77-440f-8e24-9e1a20d16a26",
            "actions": [
                {
                    "name": "CreateObject",
                    "type": "Button",
                    "id": "08dd9197-720a-48ff-a3f6-65d91e78ee68",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlaceObject",
                    "type": "Button",
                    "id": "42e9032d-9565-4cc3-9ab4-c5061fdc001d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateObject",
                    "type": "Button",
                    "id": "418447a0-7f12-4914-87b0-a7772cfca441",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DeleteObject",
                    "type": "Button",
                    "id": "155a7ac9-3464-4675-97cd-30a656490b3b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d044547-1dd3-45bc-b5ee-05bcf058ee8f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5810132-090e-4705-8968-ceaf26363428",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70bb5f61-5799-4474-af8b-12f3633822c8",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "113b22a7-9fbb-4584-acad-d58d454aef84",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteObject",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}